$Id: ChangeLog,v 1.111 2010/06/01 20:26:45 tho Exp $

ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html

LibU X.Y.Z
	- [array] #undef 'I' (imaginary unit) when including complex.h to avoid
	  name clash -- e.g. with openssl/rsa.h
	- [net] fix u_connect buggy behaviour on EINTR (reported by Mickael Auger)
	- [net] add _ex variants to socket creation interfaces to handle timeouted
	  operations
	- [hmap] header cleanup: remove object and policy struct's explicit layout
	- [test] fix conditional include logics that enables sandboxing
	- [str] don't rely on calloc for initialization of str object internal vars

LibU 2.1.0
	- fix bug in configure when handling the inline keyword support
	- Minix 3.8.1 port
	- fix configure to please OpenBSD when searching for [gs]etsockopt and
	  rusage structure
	- [string] new interface u_string_detach_cstr
	- [lexer] new module to do basic lexical tokenizing 
	- [json] new module to encode/decode/validate JSON objects (RFC 4627)
	- [bst] new binary search tree module
	- [misc] added u_atol and u_atof interfaces
	- [rb] malloc based implementation, both using contiguous (i.e. double
	  sized) and wrapped buffer ; make it work on Windows
	- [test] make it work on Windows
	- [uri] regex-free uri parser (now recursive descent) ; make it work on
	  MinGw ; path is now optional and has default value "/" ; fixed missing 
	  "//" in u_uri_knead_authority()
	- [config] add u_config_walk function to traverse the config tree
	- [carpal] fixed 1.0 compatibility (missing u_con)
	- [net] U_NET_OPT_DGRAM_BROADCAST to set DGRAM client socket broadcast 
	  option
	- [hmap] added u_hmap_count() to get the current number of objects stored
	  into hmap

LibU 2.0.0
	- [pqueue] added new priority queue module
	- [rb] added new ring buffer module
	- [test] completely revamped, new interfaces
	- [net] module implementation and interfaces revamped
	- [uri] complete support for RFC 3986; added u_uri_knead interface to 